# quickGL

./: .gitignore  CMakeLists.txt  Makefile
include/: camera.h  glinit.h  shape.h  tool_base.h
src/: camera.cpp  camera2d.cpp  camera_controller.cpp  glinit.cpp  palette.cpp  tool_base.cpp
tests/: test.cpp
